--- a/app/views/users_groups/_form_leave.html.erb
+++ b/app/views/users_groups/_form_leave.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @group ,url: leave_path(@group), method: :delete, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for @group ,url: users_group_leave_path(@group), method: :delete, :html => {:class => 'form-horizontal'} do |f| %>
 <div class="form-group">
   <div class="col-sm-12">
     <button type="submit" class="btn btn-danger btn-lg">Free yourself, leave <%= @group.name %></button>
