--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -55,6 +55,28 @@
         <ul class="list-group">
           <li class="list-group-item">
             <% if is_logged_in %>
+            <%= link_to new_users_group_path do %>
+            <span class="list-group-item-value">Create group</span>
+            <% end %>
+            <% else %>
+            <%= link_to login_path do %>
+            <span class="list-group-item-value">Create group</span>
+            <% end %>
+            <% end %>
+          </li>
+          <li class="list-group-item">
+            <% if is_logged_in %>
+            <%= link_to global_groups_list_path do %>
+            <span class="list-group-item-value">Join group</span>
+            <% end %>
+            <% else %>
+            <%= link_to login_path do %>
+            <span class="list-group-item-value">Join group</span>
+            <% end %>
+            <% end %>
+          </li>
+          <li class="list-group-item">
+            <% if is_logged_in %>
             <%= link_to user_users_groups_path(current_logged_user) do %>
             <span class="list-group-item-value">My groups</span>
             <% end %>
@@ -64,35 +86,14 @@
             <% end %>
             <% end %>
           </li>
-          <li class="list-group-item">
-            <% if is_logged_in %>
-            <%= link_to new_user_users_group_path(current_logged_user) do %>
-            <span class="list-group-item-value">Create group</span>
-            <% end %>
-            <% else %>
-            <%= link_to login_path do %>
-            <span class="list-group-item-value">Create group</span>
-            <% end %>
-            <% end %>
-          </li>
-          <li class="list-group-item">
-            <% if is_logged_in %>
-            <%= link_to global_groups_list_path do %>
-            <span class="list-group-item-value">Join group</span>
-            <% end %>
-            <% else %>
-            <%= link_to login_path do %>
-            <span class="list-group-item-value">Join group</span>
-            <% end %>
-            <% end %>
-          </li>
-          <li class="list-group-item spacer">
-          </li>
+
+          <li class="list-group-item spacer"></li>
           <li class="list-group-item">
             <%= link_to global_groups_list_path do %>
             <span class="list-group-item-value">All friend's groups</span>
             <% end %>
           </li>
+          
         </ul>
       </div>
     </li>
