--- a/app/views/users_groups/_form_new.html.erb
+++ b/app/views/users_groups/_form_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([current_logged_user, @group],:html => {:class => 'form-horizontal'}) do |f| %>
+<%= form_for @group,:html => {:class => 'form-horizontal'} do |f| %>
 <div class="form-group">
   <%= label_tag 'name', "Group's name", class: 'col-sm-2 col-md-2 control-label' %>
   <div class="col-sm-10 col-md-10">
