--- a/app/views/users_groups/_list_groups.html.erb
+++ b/app/views/users_groups/_list_groups.html.erb
@@ -5,7 +5,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
-          <%= link_to user_users_group_path(group.get_proprietary, group) do %>
+          <%= link_to users_group_path(group) do %>
           <%= group.name %> [<%= group.tag.upcase %>]
           <% end %>
         </h3>
@@ -13,7 +13,7 @@
       <div class="panel-body">
         <div class="row" style="margin-bottom:1em;">
           <div class="col-md-12">
-            <%= link_to "Show details", show_group_path(group), class:"btn btn-primary btn-xs" %>
+            <%= link_to "Show details", users_group_path(group), class:"btn btn-primary btn-xs" %>
             <% if is_logged_in %>
             <% if group.is_user_already_group_member(current_logged_user) %>
               <button class="btn btn-primary btn-xs disabled"
@@ -21,7 +21,7 @@
                       data-placement="top"
                       title="You're already in this group, genius 😆 !">Join</button>
             <% else %>
-            <%= link_to "Join", ask_join_users_group_path(group), class:"btn btn-primary btn-xs" %>
+            <%= link_to "Join", users_group_ask_join_path(group), class:"btn btn-primary btn-xs" %>
             <% end %>
             <% else %>
             <button class="btn btn-primary btn-xs disabled"
