--- a/app/views/users_groups/_show_group_members.html.erb
+++ b/app/views/users_groups/_show_group_members.html.erb
@@ -25,7 +25,7 @@
           <td><%= user.lastname.capitalize%></td>
           <td class="text-center">
             <% if group.is_proprietary(current_logged_user) && user != current_logged_user && !group.is_proprietary(user) %>
-            <%= link_to "kick",kick_group_member_path(group.id, member.id), method: :delete, :class => "btn btn-danger btn-xs" %>
+            <%= link_to "kick",users_group_kick_group_member_path(group.id, member.id), method: :delete, :class => "btn btn-danger btn-xs" %>
             <% elsif user == current_logged_user %>
             <button class="btn btn-danger btn-xs disabled"
             data-toggle="tooltip" data-placement="right" title="You can't kick yourself genius !">kick</button>
@@ -40,9 +40,9 @@
     </table>
     <% if is_logged_in && group.is_proprietary(current_logged_user) %>
     <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#sharing_modal">
-      Invite members <span class="glyphicon pficon-arrow" aria-hidden="true"></span>      
+      Invite members <span class="glyphicon pficon-arrow" aria-hidden="true"></span>
     </button>
-    <%= render 'sharing_modal', :data => "Share this link with your friends. This link allow them to join the group.", :link => token_join_users_group_url(group.id, group.token) %>
+    <%= render 'sharing_modal', :data => "Share this link with your friends. This link allow them to join the group.", :link => users_group_token_join_url(group.id, group.token) %>
     <% else %>
     <button class="btn btn-primary disabled" type="button"
     data-toggle="tooltip" data-placement="right" title="You need to be admin to use this.">Invite members</button>
