--- a/app/views/users_groups/_group_settings.html.erb
+++ b/app/views/users_groups/_group_settings.html.erb
@@ -1,23 +1,26 @@
 <div class="row">
   <div class="col-md-12">
     <% if is_logged_in %>
-      <!-- logged user -->
-      <% if group.is_user_already_group_member(current_logged_user) %>
-        <!-- logged & in grp -->
-        <% if group.is_proprietary(current_logged_user) %>
-        <%= render 'group_settings_proprietary' %>
-        <% else %>
-        <%= link_to "Leave this group", users_group_ask_to_leave_path(group), class: "btn btn-danger" %>
-        <% end %>
-      <% else %>
-        <!-- logged & out grp -->
-        <%= link_to "Join "+group.name, users_group_ask_join_path(group), class:"btn btn-primary" %>
-      <% end %>
-      <!-- ########## -->
+    <!-- logged user -->
+    <% if group.is_user_already_group_member(current_logged_user) %>
+    <!-- logged & in grp -->
+    <% if group.is_proprietary(current_logged_user) %>
+    <%= render 'group_settings_proprietary' %>
     <% else %>
-      <!-- anon user -->
-
-      <!-- ######### -->
+    <%= link_to "Leave this group", users_group_ask_to_leave_path(group), class: "btn btn-danger" %>
+    <% end %>
+    <% else %>
+    <!-- logged & out grp -->
+    <%= link_to "Join "+group.name, users_group_ask_join_path(group), class:"btn btn-primary" %>
+    <% end %>
+    <!-- ########## -->
+    <% else %>
+    <!-- anon user -->
+    <p>
+      Create a GGC account and log in to join groups.
+    </p>
+    <%= link_to "Login | Register ", login_path, class:"btn btn-primary" %>
+    <!-- ######### -->
     <% end %>
   </div>
 </div>
