--- a/app/views/users_groups/show.html.erb
+++ b/app/views/users_groups/show.html.erb
@@ -39,21 +39,15 @@
                 <h3 class="panel-title">Teams</h3>
               </div>
               <div class="panel-body">
-                <table class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th>Team Name</th>
-                      <th>Infos</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th>Team de qualité</th>
-                      <th>details</th>
-                    </tr>
-                  </tbody>
-                </table>
-                <button class="btn btn-primary disabled" type="button">Create team</button>
+                <%= render 'show_group_teams' %>
+                <% if current_logged_user && @group.is_user_already_group_member(current_logged_user) %>
+                <%= link_to "Create team", new_users_group_team_path(@group), :class => "btn btn-primary " %>
+                <% else %>
+                <button class="btn btn-primary disabled" type="button"
+                data-toggle="tooltip"
+                data-placement="right"
+                title="You need to be logged and member of <%= @group.name %> to create teams!">Create team</button>
+                <% end %>
               </div>
             </div>
           </div>
