--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 <div class="row">
   <div class="col-md-12">
-    <h1>Events</h1>
+    <h1><%= @title.capitalize %></h1>
   </div>
 </div>
 <% if @events.count > 0 %>
