Updated left menu

--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -2,8 +2,8 @@
   <ul class="list-group">
     <li class="list-group-item">
       <%= link_to root_path do %>
-      <span class="fa fa-dashboard" data-toggle="tooltip" title="Dashboard"></span>
-      <span class="list-group-item-value">Dashboard</span>
+      <span class="glyphicon glyphicon-home" data-toggle="tooltip" title="Home"></span>
+      <span class="list-group-item-value">Home</span>
       <% end %>
     </li>
     <% if is_logged_in %>
