--- a/app/views/teams/_form_new.html.erb
+++ b/app/views/teams/_form_new.html.erb
@@ -8,13 +8,13 @@
 <div class="form-group">
   <%= label_tag 'name', "Team's name", class: 'col-sm-2 col-md-2 control-label' %>
   <div class="col-sm-10 col-md-10">
-    <%= f.text_field :name, class: 'form-control'%>
+    <%= f.text_field :name, class: 'form-control', :autocomplete => :off%>
   </div>
 </div>
 <div class="form-group">
-  <%= label_tag 'tag', "Team's tag", class: 'col-sm-2 col-md-2 control-label'  %>
+  <%= label_tag 'tag', "Team's tag (4 chars)", class: 'col-sm-2 col-md-2 control-label'  %>
   <div class="col-sm-10 col-md-10">
-    <%= f.text_field :tag, class: 'form-control'%>
+    <%= f.text_field :tag, class: 'form-control', :autocomplete => :off%>
   </div>
 </div>
 <div class="form-group">
