--- a/app/views/users_groups/_form_new.html.erb
+++ b/app/views/users_groups/_form_new.html.erb
@@ -2,19 +2,19 @@
 <div class="form-group">
   <%= label_tag 'name', "Group's name", class: 'col-sm-2 col-md-2 control-label' %>
   <div class="col-sm-10 col-md-10">
-    <%= f.text_field :name, class: 'form-control'%>
+    <%= f.text_field :name, class: 'form-control', :autocomplete => :off %>
   </div>
 </div>
 <div class="form-group">
-  <%= label_tag 'tag', "Group tag", class: 'col-sm-2 col-md-2 control-label'  %>
+  <%= label_tag 'tag', "Group tag (4 chars)", class: 'col-sm-2 col-md-2 control-label'  %>
   <div class="col-sm-10 col-md-10">
-    <%= f.text_field :tag, class: 'form-control'%>
+    <%= f.text_field :tag, class: 'form-control', :autocomplete => :off %>
   </div>
 </div>
 <div class="form-group">
   <%= label_tag 'password', "Password", class: 'col-sm-2 col-md-2 control-label'  %>
   <div class="col-sm-10 col-md-10">
-    <%= f.password_field :password, class: 'form-control'%>
+    <%= f.password_field :password, class: 'form-control', :autocomplete => :off %>
   </div>
 </div>
 <div class="form-group">
