--- a/app/views/registrations/_teambased_registration.html.erb
+++ b/app/views/registrations/_teambased_registration.html.erb
@@ -16,6 +16,18 @@
     </div>
     <div class="panel-body">
       <p>
+        <% if !@event_resource.game %>
+        You're a manager or supporter dude, you need to have peaple with you to support / manage.</br>
+        So let me explain what you have to do:
+        <ul>
+          <li>
+            <%= link_to "Create", new_users_group_path %> or <%= link_to "join", global_groups_list_path %> a friend's group
+          </li>
+          <li>
+            If you're a <strong>manager</strong> or a <strong>supporter</strong>, you can come back here afterwards
+          </li>
+        </ul>
+        <% else %>
         <%= @event_resource.game.name.capitalize %> is a team based game.</br>
         You can't come here, ask for a registration and simply come to
         <%= link_to @event_resource.event.name, event_path(@event_resource.event) %> alone dude.</br>
@@ -25,13 +37,11 @@
             <%= link_to "Create", new_users_group_path %> or <%= link_to "join", global_groups_list_path %> a friend's group
           </li>
           <li>
-            If you're a <strong>manager</strong>, you can come back here afterwards
-          </li>
-          <li>
             If you're a <strong><%= @event_resource.game.shortname %> player</strong>,
             then you have to <%= link_to "join or create", global_teams_list_path %> a team.
           </li>
         </ul>
+        <% end %>
       </p>
     </div>
   </div>
