--- a/app/views/registrations/_solo_registration.html.erb
+++ b/app/views/registrations/_solo_registration.html.erb
@@ -2,4 +2,5 @@
 <%= render 'registrations/solo_form_new' %>
 <% else %>
 <!-- Not logged -->
+<%= render 'registrations/say_your_name' %>
 <% end %>
