--- a/app/views/registrations/_display_pack.html.erb
+++ b/app/views/registrations/_display_pack.html.erb
@@ -4,7 +4,7 @@
       <h2><%= pack.name.capitalize %></h2>
     </div>
     <div class="col-md-4 text-right">
-      <h3><%= pack.price %> CHF</h3>
+      <h3 class="amount"><%= pack.price %> CHF</h3>
     </div>
   </div>
   <div class="div-description">
