--- a/app/views/registrations/_form_new.html.erb
+++ b/app/views/registrations/_form_new.html.erb
@@ -96,7 +96,18 @@
     <h2>Payment</h2>
     <div class="form-group">
       <div class="col-md-12 text-center">
-        <button type="submit" class="btn btn-primary btn-lg">Go to payment</button>
+        <div id="error_explanation">
+        </div>
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="<%= Rails.application.secrets.stripe_pub_key %>"
+        data-name="Geneva Gaming Convention"
+        data-description="Convention ticket"
+        data-amount="<%= @amount %>"
+        data-email="<%= current_logged_user.mail%>"
+        data-image="https://s3.amazonaws.com/stripe-uploads/acct_1AhZodBBkcVyn4XPmerchant-icon-1500541901517-ggc_2017_logo.png"
+        data-locale="en"
+        data-currency="chf">
+        </script>
       </div>
     </div>
   </div>
