Check user validity before registration
, updated tournaments quotas

--- a/app/views/registrations/_form_new.html.erb
+++ b/app/views/registrations/_form_new.html.erb
@@ -50,7 +50,7 @@
         <% end.empty? %>
         <div class="panel panel-info">
           <div class="panel-heading">
-            <h3 class="panel-title">Nope nope nope</h3>
+            <h3 class="panel-title text-center">Nope nope nope</h3>
           </div>
           <div class="panel-body">
             <p>
