--- a/app/views/registrations/_solo_form_new.html.erb
+++ b/app/views/registrations/_solo_form_new.html.erb
@@ -48,7 +48,7 @@
         </div>
         <% end.empty? %>
         <div class="panel panel-info" style="margin-top:1em;">
-          <div class="panel-heading">
+          <div class="panel-heading text-center">
             <h3 class="panel-title">Moon Moon</h3>
           </div>
           <div class="panel-body">
