--- a/app/views/registrations/_solo_form_new.html.erb
+++ b/app/views/registrations/_solo_form_new.html.erb
@@ -1,5 +1,6 @@
 <%= form_for [@event_resource.event, Registration.new],:html => {:class => 'form-horizontal'} do |f| %>
 <%= hidden_field_tag 'event_resource_id', @event_resource.id %>
+<%= hidden_field_tag 'event_id', @event_resource.event.id %>
 <div class="row">
   <div class="col-md-4">
     <h2>Select a <%= @event_resource.event.shortname %> pack</h2>
