Updated ApplePay url

--- a/app/assets/javascripts/registration.js.erb
+++ b/app/assets/javascripts/registration.js.erb
@@ -101,7 +101,7 @@ var session = Stripe.applePay.buildSession(paymentRequest,
     registration_pack = $("input[name=registration_pack]").val();
     registration_team = $("input[name=registration_team]").val();
     is_manager = $("input[name=is_manager]").val();
-    $.post('/events/'+event_id+'/event_resources/'+event_resource_id, { stripeToken: result.token.id, event_resource_id: event_resource_id, registration_pack: registration_pack, registration_team: registration_team, is_manager: is_manager, event_id: event_id}).done(function() {
+    $.post('/events/'+event_id+'/registrations/', { stripeToken: result.token.id, event_resource_id: event_resource_id, registration_pack: registration_pack, registration_team: registration_team, is_manager: is_manager, event_id: event_id}).done(function() {
       completion(ApplePaySession.STATUS_SUCCESS);
       window.location.href = '/events/'+event_id+'/event_resources/'+event_resource_id;
     }).fail(function() {
